fix: Standarized responses and standarized error by layer, also create the anotation foreach endpoint and its documentatioon
